k3s/services/postgress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: postgres
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - postgres.homelab.kevinlutzer.ca
    secretName: postgres-kevinlutzer-ca-tls
  rules:
  - host: postgres.homelab.kevinlutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: postgres-service
              port:
                number: 5432
